# Masters

First_Stage/: must_do.txt
First_Stage/run/: .acmsetup.save  .asetup.save  CustomPUWeights.root  MyPackageAlgJobOptions.py  PoolFileCatalog.xml.BAK  pathena_submit.py
First_Stage/run/InputScripts/: MadGraph_Zee.txt  MadGraph_Zmumu.txt  Sherpa_Wlnu.txt  Sherpa_Zee.txt  Sherpa_Zmumu.txt  Sherpa_Ztautau.txt
First_Stage/source/AnalysisCam/: .gitignore  README.md
First_Stage/source/AnalysisCam/AnalysisCamEvent/: CMakeLists.txt
First_Stage/source/AnalysisCam/AnalysisCamEvent/AnalysisCamEvent/: AnalysisCamEventDict.h  CamAlgorithm.h  CamAudit.h  CamDeque.h  CamEvent.h  CamMetaData.h  CamObject.h  CamProperty.h  CamService.h  CamTool.h  CamVector.h  CamWriter.h  ExecuteTimeEstimator.h  ICamService.h  ICamTool.h  LinkDef.h  selection.xml
First_Stage/source/AnalysisCam/AnalysisCamEvent/cmt/: requirements  version.cmt
First_Stage/source/AnalysisCam/AnalysisCamEvent/python/: ExecuteTimeEstimator.py
First_Stage/source/AnalysisCam/AnalysisCamEvent/share/: ExecuteTimeEstimator.py  d3pdJobOptions.py  metadata.tsv  xAODJobOptions.py
First_Stage/source/AnalysisCam/AnalysisCamEvent/src/: CamAlgorithm.cxx  CamAudit.cxx  CamDeque.cxx  CamEvent.cxx  CamExampleAlg.cxx  CamExampleAlg.h  CamMetaData.cxx  CamObject.cxx  CamProperty.cxx  CamService.cxx  CamTool.cxx  CamVector.cxx  CamWriter.cxx  CamxAODExampleAlg.cxx  CamxAODExampleAlg.h  ExecuteTimeEstimator.cxx  LinkDef.h
First_Stage/source/AnalysisCam/AnalysisCamEvent/src/components/: AnalysisCamEvent_entries.cxx  AnalysisCamEvent_load.cxx
First_Stage/source/AnalysisCam/AnalysisCamROOT/: CMakeLists.txt
First_Stage/source/AnalysisCam/AnalysisCamROOT/AnalysisCamROOT/: LinkDef.h  TChannelInfo.h
First_Stage/source/AnalysisCam/AnalysisCamROOT/cmt/: requirements  version.cmt
First_Stage/source/AnalysisCam/AnalysisCamROOT/src/: TChannelInfo.cxx
First_Stage/source/AnalysisCam/AnalysisCamTools/GeneralCamTools/: CMakeLists.txt
First_Stage/source/AnalysisCam/AnalysisCamTools/GeneralCamTools/GeneralCamTools/: IChannelInfoTool.h
First_Stage/source/AnalysisCam/AnalysisCamTools/GeneralCamTools/cmt/: requirements
First_Stage/source/AnalysisCam/AnalysisCamTools/GeneralCamTools/src/: ChannelInfoTool.cxx  ChannelInfoTool.h
First_Stage/source/AnalysisCam/AnalysisCamTools/GeneralCamTools/src/components/: GeneralCamTools_entries.cxx  GeneralCamTools_load.cxx
First_Stage/source/AnalysisCam/AnalysisCamTools/xAODCamTools/: CMakeLists.txt
First_Stage/source/AnalysisCam/AnalysisCamTools/xAODCamTools/cmt/: version.cmt
First_Stage/source/AnalysisCam/AnalysisCamTools/xAODCamTools/demo/: testMET.C
First_Stage/source/AnalysisCam/AnalysisCamTools/xAODCamTools/share/configs/: example.opts
First_Stage/source/AnalysisCam/AnalysisCamTools/xAODCamTools/src/: CamElProvider.cxx  CamElProvider.h  CamElSfProvider.cxx  CamElSfProvider.h  CamEleSelector.cxx  CamEleSelector.h  CamEventPreselectionTool.cxx  CamEventPreselectionTool.h  CamJetProvider.cxx  CamJetProvider.h  CamJetSelector.cxx  CamJetSelector.h  CamJetSfProvider.cxx  CamJetSfProvider.h  CamMETProvider.cxx  CamMETProvider.h  CamMuonProvider.cxx  CamMuonProvider.h  CamMuonSelector.cxx  CamMuonSelector.h  CamMuonSfProvider.cxx  CamMuonSfProvider.h  CamTauProvider.cxx  CamTauProvider.h  CamTauSelector.cxx  CamTauSelector.h  xAODLumiSvc.cxx  xAODLumiSvc.h
First_Stage/source/AnalysisCam/AnalysisCamTools/xAODCamTools/src/components/: xAODCamTools_entries.cxx  xAODCamTools_load.cxx
First_Stage/source/MyPackage/: CMakeLists.txt
Second_Stage/: Backgrounds.txt  Data_Regions.csv  GRL.csv  jobscriptSmall  launcher.py  setup.sh
Second_Stage/inc/: MyEvent.h  MyEventLinkDef.h
Second_Stage/src/: Analysis  Analysis.C  MyEvent.C  MyEventDict_rdict.pcm  launcher_temp.files  makefile  tmpSmall.files
Third_Stage/: setup.sh
Third_Stage/Scripts/: Activation_Functions.py  Descent_Vis.py  Holdout.py  Loss.py  Loss_Table.py  New_loss.py  Second_Search.py  Top_Loss.py  Truth_Distributions.py
Third_Stage/Source/: Check_Cuda.py  CreateHistograms_main.py  MultiPlot_main.py  StackPlot_main.py
(+299 files in other folders)
